--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
     </div>
     
-    <img src="images/TS1.jpg" class="TS1">
-    <img src="images/TS2.jpg" class="TS2">
+    <img src="images/TS1.jpg" class="TS1" loading="lazy">
+    <img src="images/TS2.jpg" class="TS2" loading="lazy">
 
     <div id = "testPage" style="display: none;">
         <link rel="stylesheet" href="style2.css">
@@ -47,7 +47,7 @@
             <div class="container2"><p class="numeric2">0</p> <p class="text2">chars/min</p></div>
             <div class="container2"><p class="numeric2">0</p> <p class="text2">% accuracy</p></div>
           </div>
-          <img src="images/TP1a.jpg" class="TP1">
+          <img src="images/TP1a.jpg" class="TP1" loading="lazy">
           <div class="typing-text">
             <p id="textContainer" class="paragraphs">
                 a girl runs through the park laughing as the sun warms her face
